8196217: NMT: add_committed_regions doesn't merge succeeding regions

Reviewed-by: zgu, pliden, coleenp